2005-11-04  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac: Fix check for XInput and add a check
	  for libgen.h.  Fixes bugs #320580 and #320581.

2005-11-03  Brian Cameron  <brian.cameron@sun.com>

	* gui/modules/Makefile.am:  No longer link against
	  libvicious since it isn't used by the gestures
	  listeners.

2005-11-03  Brian Cameron  <brian.cameron@sun.com>

	* daemon/getvt.c: Patch to make GDM use VT_GETSTATE for
	  peeking VT freeness.  Patch provided by Samuel Thibault
	  <samuel.thibault@ens-lyon.org>.  Fixes bug #315313.

2005-11-03  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf: Updated UPDATE_CONFIG section
	  of docs to reflect changes made to GDM configuration.

2005-11-03  Dennis Cranston  <dennis_cranston@yahoo.com>

	* config/gdm.conf.in: Updates for bug #314685.
	* docs/C/gdm.xml: Fixes bug #314685.

2005-11-03  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gui/gdmsetup.desktop.in:  Update Name, GenericName & Comment
	  to "Login Window" preferences.  Change the category from
	  Applications->System Tools to Desktop->Administration.
	  Updates bug #314685.

2005-11-03  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gui/gdmchooser.c: (main):  Set the window icon.
	* gui/gdmchooser.glade:  Use HIG recommended widget spacing.
	  Fixes bug #320425.

2005-11-03  Brian Cameron  <brian.cameron@sun.com>

	Redesign of daemon configuraton.  Now all vicious-extensions
	logic is in gdmconfig.[ch].  This greatly simplifies how the
	UPDATE_CONFIG, and GET_CONFIG commands work and makes it
	easier to update the way GDM handles configuration.  Changed
	ve_setenv/ve_unsetenv to g_setenv/g_unsetenv since GDM requires
	a newer version of GLIB than could possibly cause the old
	ve versions to get used.

	* daemon/gdmconfig.[ch]: New logic for interacting with
	  vicious-extensions.
	* daemon/gdm.h: Updated comments and changed the #define
	  for many configuration options so the naming is more